[gd_scene load_steps=18 format=3 uid="uid://dfikts0no6d1h"]

[ext_resource type="Script" path="res://brick_counter.gd" id="1_1pc83"]
[ext_resource type="Script" path="res://player_board.gd" id="1_ssfaf"]
[ext_resource type="Texture2D" uid="uid://ynxwgnkrhgdb" path="res://Resource Icons.png" id="2_d7p5t"]
[ext_resource type="Script" path="res://vp_count.gd" id="2_eaqo8"]
[ext_resource type="Script" path="res://town_count.gd" id="3_2siks"]
[ext_resource type="Script" path="res://brick_count.gd" id="3_60ipw"]
[ext_resource type="Script" path="res://wood_counter.gd" id="4_8kmn5"]
[ext_resource type="Script" path="res://road_count.gd" id="4_rguhh"]
[ext_resource type="Script" path="res://cities_count.gd" id="5_kit5e"]
[ext_resource type="Script" path="res://wheat_counter.gd" id="5_nw2s3"]
[ext_resource type="Script" path="res://ore_counter.gd" id="6_q63se"]
[ext_resource type="Script" path="res://wool_counter.gd" id="7_sjrbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5sag6"]
atlas = ExtResource("2_d7p5t")
region = Rect2(71, 3, 63, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_4anf7"]
atlas = ExtResource("2_d7p5t")
region = Rect2(284.782, 2.58532, 62.5675, 62.5675)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyb6e"]
atlas = ExtResource("2_d7p5t")
region = Rect2(1.28007, 2.71632, 61.9882, 62.8572)

[sub_resource type="AtlasTexture" id="AtlasTexture_ippt5"]
atlas = ExtResource("2_d7p5t")
region = Rect2(141.544, 2, 63.4365, 63.9618)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu2mj"]
atlas = ExtResource("2_d7p5t")
region = Rect2(213.525, 2.00599, 63.7261, 63.4365)

[node name="PlayerBoard" type="Control"]
layout_mode = 3
scale = Vector2(1, 1.04684)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ssfaf")

[node name="CanvasGroup" type="CanvasGroup" parent="."]
scale = Vector2(0.68, 0.656109)

[node name="Board" type="Panel" parent="CanvasGroup"]
layout_direction = 2
offset_right = 372.0
offset_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VictoryPoints" type="VBoxContainer" parent="CanvasGroup/Board"]
top_level = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -937.0
offset_top = 2.0
offset_right = -887.0
offset_bottom = 52.0
grow_horizontal = 0
scale = Vector2(0.71, 0.789)

[node name="VPLabel" type="Label" parent="CanvasGroup/Board/VictoryPoints"]
layout_mode = 2
text = "VP"
horizontal_alignment = 1

[node name="VPCount" type="Label" parent="CanvasGroup/Board/VictoryPoints"]
layout_mode = 2
horizontal_alignment = 1
script = ExtResource("2_eaqo8")

[node name="PlayerName" type="Label" parent="CanvasGroup/Board"]
layout_mode = 1
offset_right = 153.0
offset_bottom = 38.0

[node name="Buildings" type="HBoxContainer" parent="CanvasGroup/Board"]
top_level = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 71.0
offset_top = -282.0
offset_right = 220.0
offset_bottom = -232.0
grow_vertical = 2
scale = Vector2(0.758209, 0.736912)

[node name="Towns" type="VBoxContainer" parent="CanvasGroup/Board/Buildings"]
layout_mode = 2

[node name="TownLabel" type="Label" parent="CanvasGroup/Board/Buildings/Towns"]
layout_mode = 2
text = "Towns"

[node name="TownCount" type="Label" parent="CanvasGroup/Board/Buildings/Towns"]
layout_mode = 2
horizontal_alignment = 1
script = ExtResource("3_2siks")

[node name="Roads" type="VBoxContainer" parent="CanvasGroup/Board/Buildings"]
layout_mode = 2

[node name="RoadLabel" type="Label" parent="CanvasGroup/Board/Buildings/Roads"]
layout_mode = 2
text = "Roads"

[node name="RoadCount" type="Label" parent="CanvasGroup/Board/Buildings/Roads"]
layout_mode = 2
horizontal_alignment = 1
script = ExtResource("4_rguhh")

[node name="Cities" type="VBoxContainer" parent="CanvasGroup/Board/Buildings"]
layout_mode = 2

[node name="CitiesLabel" type="Label" parent="CanvasGroup/Board/Buildings/Cities"]
layout_mode = 2
text = "Cities"

[node name="CitiesCount" type="Label" parent="CanvasGroup/Board/Buildings/Cities"]
layout_mode = 2
horizontal_alignment = 1
script = ExtResource("5_kit5e")

[node name="Resources" type="HBoxContainer" parent="CanvasGroup/Board"]
top_level = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -560.0
offset_right = -821.0
offset_bottom = -470.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.755, 0.755)

[node name="Brick" type="VBoxContainer" parent="CanvasGroup/Board/Resources"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
alignment = 1
script = ExtResource("1_1pc83")

[node name="BrickIcon" type="TextureRect" parent="CanvasGroup/Board/Resources/Brick"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
texture = SubResource("AtlasTexture_5sag6")
stretch_mode = 3

[node name="BrickCount" type="Label" parent="CanvasGroup/Board/Resources/Brick"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_60ipw")

[node name="Wood" type="VBoxContainer" parent="CanvasGroup/Board/Resources"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
script = ExtResource("4_8kmn5")

[node name="WoodIcon" type="TextureRect" parent="CanvasGroup/Board/Resources/Wood"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
texture = SubResource("AtlasTexture_4anf7")
stretch_mode = 3

[node name="WoodCount" type="Label" parent="CanvasGroup/Board/Resources/Wood"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_60ipw")

[node name="Wheat" type="VBoxContainer" parent="CanvasGroup/Board/Resources"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
script = ExtResource("5_nw2s3")

[node name="WheatIcon" type="TextureRect" parent="CanvasGroup/Board/Resources/Wheat"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = SubResource("AtlasTexture_dyb6e")
stretch_mode = 3

[node name="WheatCount" type="Label" parent="CanvasGroup/Board/Resources/Wheat"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_60ipw")

[node name="Ore" type="VBoxContainer" parent="CanvasGroup/Board/Resources"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
alignment = 1
script = ExtResource("6_q63se")

[node name="OreIcon" type="TextureRect" parent="CanvasGroup/Board/Resources/Ore"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
texture = SubResource("AtlasTexture_ippt5")
stretch_mode = 3

[node name="OreCount" type="Label" parent="CanvasGroup/Board/Resources/Ore"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_60ipw")

[node name="Wool" type="VBoxContainer" parent="CanvasGroup/Board/Resources"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
alignment = 1
script = ExtResource("7_sjrbb")

[node name="WoolIcon" type="TextureRect" parent="CanvasGroup/Board/Resources/Wool"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
texture = SubResource("AtlasTexture_qu2mj")
stretch_mode = 3

[node name="WoolCount" type="Label" parent="CanvasGroup/Board/Resources/Wool"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_60ipw")
